test/corpus/map_values.txt
==================
Map values are non-nested maps, similar in syntax to records but only accepting scalar values.
==================

{
  address: {
    street: "123 Main St",
    city: "Anytown",
    state: "CA",
    zip: "12345"
  }
}

---

(gram_pattern
  root: (record
    (record_property
      key: (symbol)
      value: (map
        (map_entry
          key: (symbol)
          value: (string_literal
            content: (string_content)))
        (map_entry
          key: (symbol)
          value: (string_literal
            content: (string_content)))
        (map_entry
          key: (symbol)
          value: (string_literal
            content: (string_content)))
        (map_entry
          key: (symbol)
          value: (string_literal
            content: (string_content)))))))

==================
Map values may use quoted keys
==================

(a:Person {
  address: {
    `street name`: "123 Main St",
    "postal code": "12345",
    city: "Anytown"
  }
})

---

(gram_pattern
  (node_pattern
      identifier: (symbol)
      labels: (labels
        (symbol))
      record: (record
        (record_property
          key: (symbol)
          value: (map
            (map_entry
              key: (quoted_name
                content: (string_content))
              value: (string_literal
                content: (string_content)))
            (map_entry
              key: (double_quoted_name
                content: (string_content))
              value: (string_literal
                content: (string_content)))
            (map_entry
              key: (symbol)
              value: (string_literal
                content: (string_content))))))))

==================
Map values may not be nested
:error
==================

{
  address: {
    street: {
      number: "123",
      name: "Main St"
    },
    city: "Anytown"
  }
}

---

==================
Map values may appear in node properties
==================

(a:Person {
  address: {
    street: "123 Main St",
    city: "Anytown",
    state: "CA",
    zip: "12345"
  }
})

---

(gram_pattern
  (node_pattern
      identifier: (symbol)
      labels: (labels
        (symbol))
      record: (record
        (record_property
          key: (symbol)
          value: (map
            (map_entry
              key: (symbol)
              value: (string_literal
                content: (string_content)))
            (map_entry
              key: (symbol)
              value: (string_literal
                content: (string_content)))
            (map_entry
              key: (symbol)
              value: (string_literal
                content: (string_content)))
            (map_entry
              key: (symbol)
              value: (string_literal
                content: (string_content))))))))

==================
Map values may not appear within an array
:error
==================

(a:Person {
  addresses [{
    street: "123 Main St",
    city: "Anytown",
    state: "CA",
    zip: "12345"
  }]
})

---

==================
Map values may not contain arrays
:error
==================

(a:Person {
  identity: {
    name: "John Doe",
    aliases: ["John", "Johnny"]
  }
})

---
