test/corpus/node_annotations.txt
==================
Node: single annotation, no subject (disallowed)
:error
==================

( @description("An empty node.") )

---

(gram
  (annotated_pattern
    elements: (node_pattern
      (ERROR))))

==================
Node: two annotations, no subject (disallowed)
:error
==================

( @a(1) @b("two") )

---

(gram
  (annotated_pattern
    elements: (node_pattern
      (ERROR))))

==================
Node: annotation with identifier (disallowed)
:error
==================

( @desc("n") player1 )

---

(gram
  (annotated_pattern
    elements: (node_pattern
      (ERROR))))

==================
Node: annotation with identifier, labels, and record (disallowed)
:error
==================

( @meta("m") player1:Player { k : "v" } )

---

(gram
  (annotated_pattern
    elements: (node_pattern
      (ERROR))))

==================
Node: annotation must precede subject (disallowed after identifier)
:error
==================

( player1 @tag("x") )

---

(gram
  (annotated_pattern
    elements: (node_pattern
      identifier: (symbol)
      (ERROR))))
