test/corpus/subject_pattern.txt
==================
Subject Pattern: empty
==================

[ ]

---

(gram_pattern
  (subject_pattern))

==================
Subject Pattern: named
==================

[ a ]

---

(gram_pattern
  (subject_pattern
      identifier: (symbol)))

==================
Subject Pattern: named, labeled
==================

[ a:Subject ]

---

(gram_pattern
  (subject_pattern
      identifier: (symbol)
      labels: (labels
        (symbol))))

==================
Subject Pattern: named, labeled with a record
==================

[ a:Subject { title: "Generic Subject" } ]

---

(gram_pattern
  (subject_pattern
      identifier: (symbol)
      labels: (labels
        (symbol))
      record: (record
        (record_property
          key: (symbol)
          value: (string_literal
            content: (string_content))))))

==================
Subject Pattern: quoted label and quoted key
==================

[ a:`Team Label` { "display title" : "Generic Subject" } ]

---

(gram_pattern
  (subject_pattern
      identifier: (symbol)
      labels: (labels
        (quoted_name
          content: (string_content)))
      record: (record
        (record_property
          key: (double_quoted_name
            content: (string_content))
          value: (string_literal
            content: (string_content))))))

==================
Subject Pattern: complete subject pattern with annotation, subject, and a qualified association
==================

@description("Inspiring, collaborating, and educating a developer community")
[ devrel:Team {name : "Developer Relations"} | abk, adam, alex, alexy ]

---

(gram_pattern
  (annotated_pattern
    annotations: (annotations
      (property_annotation
        key: (symbol)
        value: (string_literal
          content: (string_content))))
    elements: (subject_pattern
      identifier: (symbol)
      labels: (labels
        (symbol))
      record: (record
        (record_property
          key: (symbol)
          value: (string_literal
            content: (string_content))))
      elements: (subject_pattern_elements
        (pattern_reference
          identifier: (symbol))
        (pattern_reference
          identifier: (symbol))
        (pattern_reference
          identifier: (symbol))
        (pattern_reference
          identifier: (symbol))))))
